--- a/Dirt Bike Park App/DirtBikePark.Cli/DirtBikePark.Cli.csproj
+++ b/Dirt Bike Park App/DirtBikePark.Cli/DirtBikePark.Cli.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
 </Project>
